// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoForm /> should match snapshot for form creation 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <TaskForm />
</ContextProvider>
`;

exports[`<TodoForm /> should match snapshot for form update 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "onStateChange": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <TaskForm
    task={
      Object {
        "id": "1234567890",
        "items": Array [
          Object {
            "description": "description 1",
            "isDone": true,
          },
          Object {
            "description": "description 2",
            "isDone": false,
          },
        ],
        "title": "Title",
      }
    }
  />
</ContextProvider>
`;
